# blogpost-python-src-layout

./: .gitignore  LICENSE  README.md
doc/: building_ruby_lambdas_with_c_extensions.md  python_src_layout_for_aws_lambdas.md  using_poetry_and_the_python_src_layout_for_aws_lambdas.md
other_blog_posts/: ankit_can_you_be_polluting_your_own_dataset.md
services/my_lambda/: LICENSE  README.md  pyproject.toml
services/my_lambda/src/my_lambda/: handler.py  utils.py
services/my_lambda/src/my_lambda/stuff/: config.yml  data.csv
services/my_lambda/tests/: test_my_handler.py
